--- a/packages/demo.express/package.json
+++ b/packages/demo.express/package.json
@@ -2,11 +2,14 @@
     "name": "@thermopylae/demo.express",
     "description": "Demo application of the Thermopylae framework using ExpressJS.",
     "keywords": [
-        "demo"
+        "thermopylae",
+        "demo",
+        "express",
+        "web-app"
     ],
     "version": "0.0.1",
     "author": "Rusu Marin <dimarusu2000@gmail.com>",
-    "repository": "https://github.com/marinrusu1997/thermopylae/tree/master/packages/demo.express",
+    "repository": "https://github.com/marinrusu1997/thermopylae",
     "main": "./dist/index.js",
     "exports": "./dist/index.js",
     "types": "./dist/index.d.ts",
